--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<h1>Shower Presentation Engine</h1>
 		<p>Yours Truly, Famous Inc.</p>
 	</header>
-
+	
+<!-- 1 слайд -->
 	<section class="slide" id="cover">
 		<h2>Shower Presentation Engine</h2>
 		<p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
@@ -42,7 +43,7 @@
 					}
 		</style>
 	</section>
-
+<!-- 2 слайд -->
 	<section class="slide">
 		<h2>Shower key features</h2>
 		<ol>
@@ -55,17 +56,17 @@
 		</ol>
 		<p class="note">Shower ['ʃəuə] noun. A person or thing that shows.</p>
 	</section>
-
+<!-- 3 слайд -->
 	<section class="slide">
 		<h2>Plain text on your slides</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur <a href="#4">adipisicing</a> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud</em> exercitation ullamco laboris <strong>nisi ut aliquip</strong> ex ea commodo consequat. Duis aute irure <i>dolor</i> in reprehenderit in voluptate velit esse cillum <b>dolore</b> eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in <code>&lt;culpa&gt;</code> qui officia deserunt mollit anim id est laborum.</p>
 	</section>
-
+<!-- 4 слайд -->
 	<section class="slide">
 		<h2>Two columns if you like</h2>
 		<p class="double">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia.</p>
 	</section>
-
+<!-- 5 слайд -->
 	<section class="slide">
 		<h2>All kind of lists</h2>
 		<ol>
@@ -81,7 +82,7 @@
 			<li>Look, seven rows exactly!</li>
 		</ol>
 	</section>
-
+<!-- 6 слайд -->
 	<section class="slide">
 		<h2>Serious citations</h2>
 		<figure>
@@ -91,7 +92,7 @@
 			<figcaption>Marcus Tullius Cicero</figcaption>
 		</figure>
 	</section>
-
+<!-- 7 слайд -->
 	<section class="slide">
 		<h2>Code samples</h2>
 		<pre>
@@ -104,7 +105,7 @@
 			<code><mark>&lt;/head&gt;</mark></code>
 		</pre>
 	</section>
-
+<!-- 8 слайд -->
 	<section class="slide">
 		<h2>Even tables</h2>
 		<table>
@@ -141,7 +142,7 @@
 		</table>
 		<p>It’s good to have information organized.</p>
 	</section>
-
+<!-- 9 слайд -->
 	<section class="slide" id="picture">
 		<h2>Pictures</h2>
 		<figure>
@@ -156,11 +157,11 @@
 				}
 		</style>
 	</section>
-
+<!-- 10 слайд -->
 	<section class="slide">
 		<h2 class="shout shrink">You can even shout this way</h2>
 	</section>
-
+<!-- 11 слайд -->
 	<section class="slide">
 		<h2>Inner navigation</h2>
 		<ol>
@@ -171,11 +172,11 @@
 			<li class="next">Nobody wants to see the same joke twice</li>
 		</ol>
 	</section>
-
+<!-- 12 слайд -->
 	<section class="slide grid">
 		<h2>All nicely aligned to grid</h2>
 	</section>
-
+<!-- 13 слайд -->
 	<section class="slide" id="see-more">
 		<h2 class="shout">
 			<img src="pictures/logo.svg" alt="Shower logo">
