--- a/index.html
+++ b/index.html
@@ -212,20 +212,41 @@
 		<p>It’s good to have information organized.</p>
 	</section>
 <!-- 9 слайд -->
-	<section class="slide" id="picture">
-		<h2>Pictures</h2>
-		<figure>
-			<img class="cover" src="pictures/picture.jpg" alt="Orange typewriter on a wooden table close-up">
-			<figcaption class="white">
-				<a href="http://fiftyfootshadows.net/">© John Carey</a>
-			</figcaption>
-		</figure>
-		<style>
-			#picture h2 {
-				color:#FFF;
-				}
-		</style>
-	</section>
+		<section class="slide" id="cover7"> 
+ <h2>Scrum Board</h2> 
+    <img align="left" class="sb" src="pictures/sb.jpg" height="200" width="350">
+<p ><strong>Scrum Board</strong>– физическая доска для визуализации информации для команды,часто используется для управления <em>спринтом</em>. Доска скрам является дополнительной функцией при реализации проектов в рамках scrum-методологии.</p> 
+   <p><strong>Колонки со значениями: </strong> 
+    <ul> 
+      <li>Backlog – что предстоит сделать</li> 
+      <li>To Do – что нужно сделать в заданный промежуток времени — спринт</li> 
+      <li>In Progress/ Work in Progress/WIP – что уже кем-либо делается в данном спринте</li> 
+      <li>Testing/ To Verify – что нужно проверить или протестировать</li> 
+      <li>Done – что уже выполнено</li> 
+    </ul> </p>
+<style> 
+    #cover7 p { 
+    margin:4px 10px 2px 0px; 
+    text-align:left; 
+    color:#000000; 
+    font-style:arial; 
+    font-size:20px; 
+               } 
+    #cover7 h2 { 
+    margin:20px 0 0; 
+    color:#000000; 
+    text-align:left; 
+    font-size:50px; 
+               } 
+     #cover7 ul{ 
+     margin:4px 10px 2px 0px; 
+     text-align:left; 
+     color:#000000; 
+     font-style:arial; 
+     font-size:15px; 
+               } 
+  </style> 
+   </section> 
 <!-- 10 слайд -->
 	<section class="slide">
 		<h2 class="shout shrink">You can even shout this way</h2>
